# aether-os

./: .env.example  .gitignore  LAUNCH_MESSAGE.txt  Procfile  README.md  aether_api_landing.html  aether_frontend.html  aether_frontend_v2.html  aether_frontend_v3.html  agents.ps1  app.py  code_verifier.py  e2b_executor.py  fix_api.txt  pyproject.toml  requirements.txt  requirements_api.txt  requirements_saas.txt  run_aether.py  runtime.txt  temp_execute.txt  test_capabilities.py
.agents/: memory.db
.agents_workspace/: generated_script.py
aether_os/: __init__.py  cli.py  cli_create.py  cli_v2.py  core_v2.py  dashboard_final.py  dashboard_v2.py  dispatcher.py  dispatcher_v2.py  dispatcher_v2_extended.py  execution_engine_real.py  full_stack.py  main.py  saas_division.py  saas_simple.py  saas_subscription.py  training_agent.py
aether_os/agents/: __init__.py  agent_factory_agent.py  analytics_engineer_agent.py  backend_engineer_agent.py  base_agent.py  business_agent.py  ceo_agent.py  cto_agent.py  data_architect_agent.py  devops_advanced_agent.py  devops_engineer_agent.py  frontend_engineer_agent.py  meta_agent.py  ml_engineer_agent.py  mobile_engineer_agent.py  product_agent.py  product_manager_agent.py  qa_engineer_agent.py  security_audit_agent.py  training_agent.py
aether_os/core/: __init__.py  code_executor.py  communication.py  git_manager.py  job_queue.py  models.py  orchestrator.py  project_manager.py
aether_workspace/: aether.db
frontend/: .gitignore  package.json
frontend/public/: index.html
terminal_agents/: __init__.py  main.py  server.py
(+24 files in other folders)
